src2/objects/Bank_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_holder_name__c</fullName>
        <label>Account holder name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_type__c</fullName>
        <label>Account type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Savings Account</fullName>
                </value>
                <value>
                    <fullName>Current Account</fullName>
                </value>
                <value>
                    <fullName>Salary Account</fullName>
                </value>
                <value>
                    <fullName>Demat Account</fullName>
                </value>
                <value>
                    <fullName>Senior Citizen Account</fullName>
                </value>
                <value>
                    <fullName>Current credit Account</fullName>
                </value>
                <value>
                    <fullName>Business Account</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Details__c</fullName>
        <label>Address Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_number__c</fullName>
        <label>Contact number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Balance__c</fullName>
        <label>Initial Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bank Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account_holder_name__c</columns>
        <columns>Account_type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00}</displayFormat>
        <label>Account Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank_Accounts</pluralLabel>
    <recordTypes>
        <fullName>Non_Saving_Account</fullName>
        <active>true</active>
        <label>Non Saving Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Saving_Account</fullName>
        <active>true</active>
        <label>Saving Account</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>